--- a/templates/login.html
+++ b/templates/login.html
@@ -10,11 +10,20 @@
   <header>
     <div class="logo">Gourmet Bistro</div>
     <nav>
-      <ul>
-        <li><a href="{{ url_for('index') }}">Home</a></li>
-        <li><a href="{{ url_for('auth.register') }}">Register</a></li>
-      </ul>
-    </nav>
+  <ul>
+    <li><a href="{{ url_for('index') }}">Home</a></li>
+    {% if session.user_id %}
+      {% if user and user.is_admin %}
+        <li><a href="{{ url_for('admin_dashboard') }}">Admin</a></li>
+      {% endif %}
+      <li><a href="{{ url_for('user_profile') }}">Profile</a></li>
+      <li><a href="{{ url_for('auth.logout') }}">Logout</a></li>
+    {% else %}
+      <li><a href="{{ url_for('auth.login') }}">Login</a></li>
+      <li><a href="{{ url_for('auth.register') }}">Register</a></li>
+    {% endif %}
+  </ul>
+</nav>
   </header>
   <section class="login-section">
     <div class="login-container">
@@ -38,6 +47,9 @@
           <input type="password" id="password" name="password" required>
         </div>
         <button type="submit" class="order-btn">Login</button>
+        {% if not user %}
+  <p>Need admin access? <a href="{{ url_for('auth.register_admin') }}">Register as admin</a></p>
+{% endif %}
       </form>
       <p>Don't have an account? <a href="{{ url_for('auth.register') }}">Register</a></p>
     </div>
